hphp/hack/test/typecheck/fc_enum_case_9.php.exp
File "fc_enum_case_9.php", line 13, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `BAR`, `BAZ` (Typing[4019])
  File "fc_enum_case_9.php", line 3, characters 6-8:
  Enum declared here
